--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Podcast Generator"
+name: "Podcast Generator Sample 2025"
 author: "Jacob Suchecki"
 description: "Generates a feed for a podcast from a YAML file"
 runs: 
